# dpdk-simple_mp-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: Finddpdk.cmake
src/: main.cpp  mp_commands.c  mp_commands.h
